--- a/PWFilmes.API/appsettings.json
+++ b/PWFilmes.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PWFilmesConnection": "server=localhost;port=3306;database=PWFilmes;uid=root"
+  }
 }
